Ajuste do AppBar

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -9,6 +9,7 @@
     "searchPost": "Search Post",
     "createPost": "Create Post",
     "account": "Account",
+    "account_title": "Personal account",
     "create_post_title":"Create neww post",
     "title":"Title",
     "description":"Description",
