--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -9,6 +9,7 @@
     "searchPost": "Buscar Post",
     "createPost": "Criar Post",
     "account": "Conta",
+    "account_title": "Conta pessoal",
     "create_post_title":"Criar novo post",
     "title":"Título",
     "description":"Descrição",
