--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -1,4 +1,5 @@
 {
+    "lost_and_found": "Lost and Found"
     "todos_os_itens_perdidos": "All Lost Items",
     "nenhum_item_encontrado": "No items found",
     "buscar_itens_perdidos": "Search Lost Items",
@@ -10,7 +11,7 @@
     "createPost": "Create Post",
     "account": "Account",
     "account_title": "Personal account",
-    "create_post_title":"Create neww post",
+    "create_post_title":"Create new post",
     "title":"Title",
     "description":"Description",
     "contact":"Contact",
