--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -1,4 +1,5 @@
 {
+    "lost_and_found": "Achados e Perdidos"
     "todos_os_itens_perdidos": "Todos os itens perdidos",
     "nenhum_item_encontrado": "Nenhum item encontrado",
     "buscar_itens_perdidos": "Buscar itens perdidos",
